--- a/index.html
+++ b/index.html
@@ -12,12 +12,34 @@
     <h3>we are chaitra group</h3>
     <h4>we are chaitra group</h4>
     <p>
-      <b>Lorem ipsum </b> dolor sit amet consectetur adipisicing elit. Numquam
+      <b>Lorem ipsum </b> dolor sit amet consectetur <i>adipisicing elit</i> .
+      Numquam
       <br />
       maiores ipsa quos doloribus quibusdam quas doloremque, aut sed et <br />
       possimus repudiandae. Vel expedita aut dolorem illum rem nobis ullam
       provident?
     </p>
+    <a href="https://www.google.com" target="_blank"
+      ><button id="click">Google</button></a
+    >
+
+    <a href="https://www.youtube.com/" target="_blank"
+      ><button id="click">Go to youtube!</button> <br
+    /></a>
+    <h4>List of fruits</h4>
+    <ul class="fruits">
+      <li>Banana</li>
+      <li>Apple</li>
+      <li>Mango</li>
+      <li>Grapes</li>
+    </ul>
+    <h4>List of animals</h4>
+    <ol class="animals">
+      <li>Tiger</li>
+      <li>Lion</li>
+      <li>Elephant</li>
+      <li>Zebra</li>
+    </ol>
     <img src="./assets/bulldog.jpg " alt="bulldog" height="300" width="400" />
   </body>
 </html>
