--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My first project</title>
+
+    <!-- css link  -->
     <link rel="stylesheet" href="./style/index.css" />
   </head>
   <body>
+    <!-- js link -->
+    <script src="./js/index.js"></script>
     <h1>we are <span>chaitra</span> group</h1>
     <h2>we are chaitra group</h2>
     <h3>we are chaitra group</h3>
@@ -20,11 +24,11 @@
       provident?
     </p>
     <a href="https://www.google.com" target="_blank"
-      ><button id="click">Google</button></a
+      ><button class="click">Visit Google</button></a
     >
 
     <a href="https://www.youtube.com/" target="_blank"
-      ><button id="click">Go to youtube!</button> <br
+      ><button class="click-to-youtube">Go to youtube!</button> <br
     /></a>
     <h4>List of fruits</h4>
     <ul class="fruits">
