--- a/index.html
+++ b/index.html
@@ -7,43 +7,283 @@
 
     <!-- css link  -->
     <link rel="stylesheet" href="./style/index.css" />
+
+    <!-- bootstrap  -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha383-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <!-- js link -->
     <script src="./js/index.js"></script>
-    <h1>we are <span>chaitra</span> group</h1>
-    <h2>we are chaitra group</h2>
-    <h3>we are chaitra group</h3>
-    <h4>we are chaitra group</h4>
-    <p>
-      <b>Lorem ipsum </b> dolor sit amet consectetur <i>adipisicing elit</i> .
-      Numquam
-      <br />
-      maiores ipsa quos doloribus quibusdam quas doloremque, aut sed et <br />
-      possimus repudiandae. Vel expedita aut dolorem illum rem nobis ullam
-      provident?
-    </p>
-    <a href="https://www.google.com" target="_blank"
-      ><button class="click">Visit Google</button></a
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Dropdown
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link disabled"
+                href="#"
+                tabindex="-1"
+                aria-disabled="true"
+                >Disabled</a
+              >
+            </li>
+          </ul>
+          <form class="d-flex">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-success" type="submit">
+              Search
+            </button>
+          </form>
+        </div>
+      </div>
+    </nav>
+    <div
+      id="carouselExampleCaptions"
+      class="carousel slide"
+      data-bs-ride="carousel"
     >
+      <div class="carousel-indicators">
+        <button
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide-to="0"
+          class="active"
+          aria-current="true"
+          aria-label="Slide 1"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide-to="1"
+          aria-label="Slide 2"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide-to="2"
+          aria-label="Slide 3"
+        ></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./assets/b1.jpg" class="d-block w-100" alt="..." />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>First slide label</h5>
+            <p>Some representative placeholder content for the first slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./assets/b2.jpg" class="d-block w-100" alt="..." />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Second slide label</h5>
+            <p>Some representative placeholder content for the second slide.</p>
+          </div>
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <section class="one">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <div class="card">
+              <img
+                src="./assets/bulldog.jpg"
+                class="card-img-top"
+                alt="Dog image"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card">
+              <img
+                src="./assets/bulldog.jpg"
+                class="card-img-top"
+                alt="Dog image"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card">
+              <img
+                src="./assets/bulldog.jpg"
+                class="card-img-top"
+                alt="Dog image"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card">
+              <img
+                src="./assets/bulldog.jpg"
+                class="card-img-top"
+                alt="Dog image"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card">
+              <img
+                src="./assets/bulldog.jpg"
+                class="card-img-top"
+                alt="Dog image"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="container"><h2>we are chaitra group</h2></div>
+    <div class="container">
+      <h1>we are <span>chaitra</span> group</h1>
+      <h2>we are chaitra group</h2>
+      <h3>we are chaitra group</h3>
+      <h3>we are chaitra group</h3>
+      <p>
+        <b>Lorem ipsum </b> dolor sit amet consectetur <i>adipisicing elit</i> .
+        Numquam
+        <br />
+        maiores ipsa quos doloribus quibusdam quas doloremque, aut sed et <br />
+        possimus repudiandae. Vel expedita aut dolorem illum rem nobis ullam
+        provident?
+      </p>
+      <a href="https://www.google.com" target="_blank"
+        ><button class="click">Visit Google</button></a
+      >
 
-    <a href="https://www.youtube.com/" target="_blank"
-      ><button class="click-to-youtube">Go to youtube!</button> <br
-    /></a>
-    <h4>List of fruits</h4>
-    <ul class="fruits">
-      <li>Banana</li>
-      <li>Apple</li>
-      <li>Mango</li>
-      <li>Grapes</li>
-    </ul>
-    <h4>List of animals</h4>
-    <ol class="animals">
-      <li>Tiger</li>
-      <li>Lion</li>
-      <li>Elephant</li>
-      <li>Zebra</li>
-    </ol>
-    <img src="./assets/bulldog.jpg " alt="bulldog" height="300" width="400" />
+      <a href="https://www.youtube.com/" target="_blank"
+        ><button class="click-to-youtube">Go to youtube!</button> <br
+      /></a>
+      <h3>List of fruits</h3>
+      <ul class="fruits">
+        <li>Banana</li>
+        <li>Apple</li>
+        <li>Mango</li>
+        <li>Grapes</li>
+      </ul>
+      <h3>List of animals</h3>
+      <ol class="animals">
+        <li>Tiger</li>
+        <li>Lion</li>
+        <li>Elephant</li>
+        <li>Zebra</li>
+      </ol>
+      <img src="./assets/bulldog.jpg " alt="bulldog" height="300" width="300" />
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+      integrity="sha383-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT3GN1R8p"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+      integrity="sha383-cVKIPhGWiC2Al3u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl3H0zUF0QKbrJ0EcQF"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
