--- a/index.html
+++ b/index.html
@@ -30,14 +30,11 @@
           />
           <ul class="list">
             <li>Home</li>
-            <li>About</li>
+            <a href="./about.html"> <li>About</li></a>
             <li>Services</li>
             <li>Contact</li>
             <li>Blogs</li>
           </ul>
-          <div>
-            <button class="btn btn-warning">Send inquery</button>
-          </div>
           <div>
             <button class="btn btn-warning">Send inquery</button>
           </div>
@@ -110,89 +107,72 @@
     <section class="one">
       <div class="container">
         <div class="row">
-          <div class="col-md-3">
-            <div class="card">
+          <div class="col-md-6">
+            <div class="xyz">
               <img
                 src="./assets/bulldog.jpg"
-                class="card-img-top"
-                alt="Dog image"
+                class="img-fluid"
+                alt="dog image"
               />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
+              <h2>Product title</h2>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Mollitia provident eum laboriosam, nostrum ex molestias dolore
+                dolores eaque quod recusandae. Reiciendis, commodi distinctio.
+                Vel nisi error, omnis ratione expedita nostrum?
+              </p>
+              <button class="btn btn-primary">Add to cart</button>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="xyz">
+              <img
+                src="./assets/bulldog.jpg"
+                class="img-fluid"
+                alt="dog image"
+              />
+              <h2>Product title</h2>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Mollitia provident eum laboriosam, nostrum ex molestias dolore
+                dolores eaque quod recusandae. Reiciendis, commodi distinctio.
+                Vel nisi error, omnis ratione expedita nostrum?
+              </p>
+              <button class="btn btn-primary">Add to cart</button>
             </div>
           </div>
           <div class="col-md-3">
-            <div class="card">
+            <div class="xyz">
               <img
                 src="./assets/bulldog.jpg"
-                class="card-img-top"
-                alt="Dog image"
+                class="img-fluid"
+                alt="dog image"
               />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
+              <h2>Product title</h2>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Mollitia provident eum laboriosam, nostrum ex molestias dolore
+                dolores eaque quod recusandae. Reiciendis, commodi distinctio.
+                Vel nisi error, omnis ratione expedita nostrum?
+              </p>
+              <button class="btn btn-primary">Add to cart</button>
             </div>
           </div>
           <div class="col-md-3">
-            <div class="card">
+            <div class="xyz">
               <img
                 src="./assets/bulldog.jpg"
-                class="card-img-top"
-                alt="Dog image"
+                class="img-fluid"
+                alt="dog image"
               />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card">
-              <img
-                src="./assets/bulldog.jpg"
-                class="card-img-top"
-                alt="Dog image"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card">
-              <img
-                src="./assets/bulldog.jpg"
-                class="card-img-top"
-                alt="Dog image"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
+              <h2>Product title</h2>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Mollitia provident eum laboriosam, nostrum ex molestias dolore
+                dolores eaque quod recusandae. Reiciendis, commodi distinctio.
+                Vel nisi error, omnis ratione expedita nostrum?
+              </p>
+              <button class="btn btn-primary">Add to cart</button>
             </div>
           </div>
         </div>
