--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <div
       id="carouselExampleCaptions"
-      class="carousel slide"
+      class="carousel slide slider"
       data-bs-ride="carousel"
     >
       <div class="carousel-indicators">
@@ -116,8 +116,8 @@
     <section class="one">
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
-            <!-- <div class="xyz">
+          <div class="col-md-3">
+            <div class="xyz1">
               <img
                 src="./assets/bulldog.jpg"
                 class="img-fluid"
@@ -131,21 +131,83 @@
                 Vel nisi error, omnis ratione expedita nostrum?
               </p>
               <button class="btn btn-primary">Add to cart</button>
-            </div> -->
-            <div class="row">
-              <div class="col-md-6">
-                <div class="card">
-                  <img src="./assets/bulldog.jpg" class="card-img-top" alt="" />
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="card">
-                  <img src="./assets/bulldog.jpg" class="card-img-top" alt="" />
-                </div>
-              </div>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-3">
+            <div class="xyz1">
+              <img
+                src="./assets/bulldog.jpg"
+                class="img-fluid"
+                alt="dog image"
+              />
+              <h2>Product title</h2>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Mollitia provident eum laboriosam, nostrum ex molestias dolore
+                dolores eaque quod recusandae. Reiciendis, commodi distinctio.
+                Vel nisi error, omnis ratione expedita nostrum?
+              </p>
+              <button class="btn btn-primary">Add to cart</button>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="xyz1">
+              <img
+                src="./assets/bulldog.jpg"
+                class="img-fluid"
+                alt="dog image"
+              />
+              <h2>Product title</h2>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Mollitia provident eum laboriosam, nostrum ex molestias dolore
+                dolores eaque quod recusandae. Reiciendis, commodi distinctio.
+                Vel nisi error, omnis ratione expedita nostrum?
+              </p>
+              <button class="btn btn-primary">Add to cart</button>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="xyz1">
+              <img
+                src="./assets/bulldog.jpg"
+                class="img-fluid"
+                alt="dog image"
+              />
+              <h2>Product title</h2>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Mollitia provident eum laboriosam, nostrum ex molestias dolore
+                dolores eaque quod recusandae. Reiciendis, commodi distinctio.
+                Vel nisi error, omnis ratione expedita nostrum?
+              </p>
+              <button class="btn btn-primary">Add to cart</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="five">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <div class="xyz">
+              <img
+                src="./assets/bulldog.jpg"
+                class="img-fluid"
+                alt="dog image"
+              />
+              <h2>Product title</h2>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Mollitia provident eum laboriosam, nostrum ex molestias dolore
+                dolores eaque quod recusandae. Reiciendis, commodi distinctio.
+                Vel nisi error, omnis ratione expedita nostrum?
+              </p>
+              <button class="btn btn-primary">Add to cart</button>
+            </div>
+          </div>
+          <div class="col-md-3">
             <div class="xyz">
               <img
                 src="./assets/bulldog.jpg"
@@ -241,10 +303,40 @@
           </div>
           <div class="col-md-6">
             <img
-              class="image-fluid"
+              class="contact-image"
               src="./assets/bulldog.jpg"
               alt="dog image"
             />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="map">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14129.96091325387!2d85.3199796711949!3d27.70214640243769!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb19a9122e5dc3%3A0x3eb124f4579db875!2sKathmandu%20Fun%20Park!5e0!3m2!1sen!2snp!4v1745142038041!5m2!1sen!2snp"
+              width="100%"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+          <div class="col-md-6">
+            <h2>Get in Touch</h2>
+            <p>Address: Kathmandu Fun Park, Kathmandu, Nepal</p>
+            <a href="tel:01-555-5555"><p>Phone: 01-555-5555</p></a>
+            <p>
+              Email:
+              <a
+                href="mailto:info@kathmandufunpark.com
+              "
+                >info@kathmandufunpark.com</a
+              >
+            </p>
           </div>
         </div>
       </div>
