--- a/index.html
+++ b/index.html
@@ -81,16 +81,20 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="./assets/b1.jpg" class="d-block w-100" alt="..." />
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption hero-section-text d-none d-md-block">
             <h5>First slide label</h5>
             <p>Some representative placeholder content for the first slide.</p>
+            <button class="btn btn-warning">Learn More</button>
+            <button class="btn btn-danger">Contact us</button>
           </div>
         </div>
         <div class="carousel-item">
           <img src="./assets/b2.jpg" class="d-block w-100" alt="..." />
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption hero-section-text d-none d-md-block">
             <h5>Second slide label</h5>
             <p>Some representative placeholder content for the second slide.</p>
+            <button class="btn btn-warning">Learn More</button>
+            <button class="btn btn-danger">Contact us</button>
           </div>
         </div>
       </div>
@@ -130,7 +134,7 @@
                 dolores eaque quod recusandae. Reiciendis, commodi distinctio.
                 Vel nisi error, omnis ratione expedita nostrum?
               </p>
-              <button class="btn btn-primary">Add to cart</button>
+              <button class="btn btn-warning">Add to cart</button>
             </div>
           </div>
           <div class="col-md-3">
@@ -147,7 +151,7 @@
                 dolores eaque quod recusandae. Reiciendis, commodi distinctio.
                 Vel nisi error, omnis ratione expedita nostrum?
               </p>
-              <button class="btn btn-primary">Add to cart</button>
+              <button class="btn btn-warning">Add to cart</button>
             </div>
           </div>
           <div class="col-md-3">
@@ -164,7 +168,7 @@
                 dolores eaque quod recusandae. Reiciendis, commodi distinctio.
                 Vel nisi error, omnis ratione expedita nostrum?
               </p>
-              <button class="btn btn-primary">Add to cart</button>
+              <button class="btn btn-warning">Add to cart</button>
             </div>
           </div>
           <div class="col-md-3">
@@ -181,7 +185,7 @@
                 dolores eaque quod recusandae. Reiciendis, commodi distinctio.
                 Vel nisi error, omnis ratione expedita nostrum?
               </p>
-              <button class="btn btn-primary">Add to cart</button>
+              <button class="btn btn-warning">Add to cart</button>
             </div>
           </div>
         </div>
@@ -204,7 +208,7 @@
                 dolores eaque quod recusandae. Reiciendis, commodi distinctio.
                 Vel nisi error, omnis ratione expedita nostrum?
               </p>
-              <button class="btn btn-primary">Add to cart</button>
+              <button class="btn btn-warning">Add to cart</button>
             </div>
           </div>
           <div class="col-md-3">
@@ -221,7 +225,7 @@
                 dolores eaque quod recusandae. Reiciendis, commodi distinctio.
                 Vel nisi error, omnis ratione expedita nostrum?
               </p>
-              <button class="btn btn-primary">Add to cart</button>
+              <button class="btn btn-warning">Add to cart</button>
             </div>
           </div>
           <div class="col-md-3">
@@ -238,7 +242,7 @@
                 dolores eaque quod recusandae. Reiciendis, commodi distinctio.
                 Vel nisi error, omnis ratione expedita nostrum?
               </p>
-              <button class="btn btn-primary">Add to cart</button>
+              <button class="btn btn-warning">Add to cart</button>
             </div>
           </div>
           <div class="col-md-3">
@@ -255,7 +259,7 @@
                 dolores eaque quod recusandae. Reiciendis, commodi distinctio.
                 Vel nisi error, omnis ratione expedita nostrum?
               </p>
-              <button class="btn btn-primary">Add to cart</button>
+              <button class="btn btn-warning">Add to cart</button>
             </div>
           </div>
         </div>
@@ -298,7 +302,7 @@
                   >Check me out</label
                 >
               </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="submit" class="btn btn-warning">Submit</button>
             </form>
           </div>
           <div class="col-md-6">
@@ -307,6 +311,18 @@
               src="./assets/bulldog.jpg"
               alt="dog image"
             />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="six">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <h4>hello before</h4>
+          </div>
+          <div class="col-md-6">
+            <h4 class="hello-after">hello after</h4>
           </div>
         </div>
       </div>
@@ -325,7 +341,7 @@
               referrerpolicy="no-referrer-when-downgrade"
             ></iframe>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-3">
             <h2>Get in Touch</h2>
             <p>Address: Kathmandu Fun Park, Kathmandu, Nepal</p>
             <a href="tel:01-555-5555"><p>Phone: 01-555-5555</p></a>
@@ -337,6 +353,17 @@
                 >info@kathmandufunpark.com</a
               >
             </p>
+          </div>
+          <div class="col-md-3">
+            <div class="social-links">
+              <h2>Follow Us</h2>
+              <a href="https://www.facebook.com" target="_blank">Facebook</a
+              ><br /><a href="https://www.twitter.com" target="_blank"
+                >Twitter</a
+              ><br /><a href="https://www.instagram.com" target="_blank"
+                >Instagram</a
+              >
+            </div>
           </div>
         </div>
       </div>
