--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             alt="logo image"
           />
           <ul class="list">
-            <li><i class="fa fa-home" aria-hidden="true"></i> Home</li>
+            <li><i class="fa icons fa-home" aria-hidden="true"></i> Home</li>
             <a href="./about.html"> <li>About</li></a>
             <li>Services</li>
             <li>Contact</li>
@@ -57,6 +57,44 @@
         </div>
       </div>
     </nav>
+    <section class="info">
+      <div class="container">
+        <div class="row">
+          <div class="info-details">
+            <div class="info-content">
+              <div class="info-icon">
+                <i class="fa-solid fa-phone-volume"></i>
+              </div>
+
+              <div class="info-text">
+                <h6>Call Us</h6>
+                <h4>2346788</h4>
+              </div>
+            </div>
+            <div class="info-content">
+              <div class="info-icon">
+                <i class="fa-solid fa-phone-volume"></i>
+              </div>
+
+              <div class="info-text">
+                <h6>Call Us</h6>
+                <h4>2346788</h4>
+              </div>
+            </div>
+            <div class="info-content">
+              <div class="info-icon">
+                <i class="fa-solid fa-phone-volume"></i>
+              </div>
+
+              <div class="info-text">
+                <h6>Call Us</h6>
+                <h4>2346788</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <div
       id="carouselExampleCaptions"
