--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </head>
   <body>
     <!-- js link -->
-    <script src="./js/index.js"></script>
+    <script src="./js/browser.js"></script>
     <nav>
       <div class="container-fluid">
         <div class="header-content">
