--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
   </head>
   <body>
     <!-- js link -->
-    <script src="./js/Array5.js"></script>
+    <script src="./js/LocalStorage.js">
+      // let name= localStorage.getItem("name")
+      // console.log(name)
+    </script>
+
     <nav>
       <div class="container-fluid">
         <div class="header-content">
