--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </head>
   <body>
     <!-- js link -->
-    <script src="./js/LocalStorage.js">
+    <script src="./js/Async.js">
       // let name= localStorage.getItem("name")
       // console.log(name)
     </script>
